updated with promotional logic

--- a/src/views/account/register.ejs
+++ b/src/views/account/register.ejs
@@ -309,7 +309,7 @@
                             <div data-v-57d49070="" class="passwordInput__container-label">
                                 
                                 <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
-                                src="./assets/png/forgetpassword-135cea3e.png">><span data-v-57d49070="">Set
+                                src="./assets/png/forgetpassword-135cea3e.png"><span data-v-57d49070="">Set
                                     password</span></div>
                             <div data-v-57d49070="" class="passwordInput__container-input">
 
@@ -339,7 +339,7 @@
                         </div>
                         <div data-v-23d378a6="" class="register__container-invitation" id="otp_div" style="margin-top: 2%;">
                             <div data-v-23d378a6="" class="register__container-invitation__label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
-                                src=""><span
+                                src="./index_files/orderCancelWarn-93894f35.png"><span
                                     data-v-23d378a6="">Enter Otp</span></div>
                             <div data-v-23d378a6="" class="register__container-invitation__input">
 
@@ -377,12 +377,7 @@
                 </div>
             </div>
         </div>
-        <div class="customer" id="customerId"
-            
-            onclick="window.location='/keFuMenu'"><img class=""
-                data-origin=""
-                src="">
-        </div>
+       
     </div>
     
     <script>
