--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -1022,7 +1022,7 @@ style="z-index: 2001;">
               ₹0.00
             </span>
           </div>
-          <p data-v-c67ad2ea="" class="tips">
+          <p data-v-c67ad2ea="" class="tips" data-lang="k3Rule">
             The miner predicts 3 DICE numbers, the mining rate is high, the mining
             is simple, and it is easy to mine
           </p>
@@ -1064,7 +1064,7 @@ style="z-index: 2001;">
               ₹0.00
             </span>
           </div>
-          <p data-v-c67ad2ea="" class="tips">
+          <p data-v-c67ad2ea="" class="tips" data-lang="d5Rule">
             5 numbers are used as the result of the latest block, and the mining methods
             are flexible and diverse
           </p>
@@ -2246,7 +2246,7 @@ style="z-index: 2001;">
       
       
     <div data-v-6a35701e="" class="luckyWinners__container">
-      <h1 data-v-6a35701e="">
+      <h1 data-v-6a35701e="" data-lang="winningDetal">
         Mining information
       </h1>
       <div data-v-6a35701e="" class="luckyWinners__container-wrapper">
@@ -2401,7 +2401,7 @@ style="z-index: 2001;">
       
 
     <div data-v-4a4a4c0e="" class="dailyProfitRank">
-      <h1 data-v-4a4a4c0e="">
+      <h1 data-v-4a4a4c0e="" data-lang="earningsRankingToday">
         Today's Minings chart
       </h1>
       <div data-v-4a4a4c0e="" class="dailyProfitRank__content">
@@ -2503,7 +2503,7 @@ style="z-index: 2001;">
     <div data-v-4641417b="" class="terms">
       <div data-v-4641417b="" class="terms-logo">
         <div data-v-4641417b="" class="terms-logo-left">
-          <img data-v-4641417b="" src="https://ossimg.tirangaagent.com/Tiranga/other/h5setting_202310181902013nan.png"
+          <img data-v-4641417b="" src="./index_files/h5setting_202401100608011fs2.png"
           alt="">
         </div>
         <span class="terms-logo-service" data-v-4641417b="">
@@ -2839,7 +2839,7 @@ style="z-index: 2001;">
           fill="#5068A7">
           </rect>
         </svg>
-        <span data-v-4641417b="">
+        <span data-v-4641417b="" data-lang="Terms">
           The Cloudmine platform advocates fairness, justice, and openness. We mainly
           operate fair Cloud Mining, blockchain games, Esports Competition, and slot machine
           games.
@@ -2852,8 +2852,8 @@ style="z-index: 2001;">
           fill="#5068A7">
           </rect>
         </svg>
-        <span data-v-4641417b="">
-          Cloudmine works with more than 10'000 online live Blockchain hashing  and slot
+        <span data-v-4641417b="" data-lang="Terms2">
+          Cloudscape works with more than 10'000 online live Blockchain hashing  and slot
           based mine, all of which are verified fair Cloud farms.
         </span>
       </p>
@@ -2864,16 +2864,16 @@ style="z-index: 2001;">
           fill="#5068A7">
           </rect>
         </svg>
-        <span data-v-4641417b="">
-          cloudmine supports fast deposit and withdrawal, and looks forward to your
+        <span data-v-4641417b="" data-lang="damanRule3">
+          Cloudscape supports fast deposit and withdrawal, and looks forward to your
           visit.
         </span>
       </p>
       <p data-v-4641417b="" class="terms-tips">
         Mining can be reducing in reward, please Chose Wisely.
       </p>
-      <p data-v-4641417b="" class="terms-tips">
-        Minecloud only accepts customers above the age of 18.
+      <p data-v-4641417b="" class="terms-tips" data-lang="damanWarn2">
+        Cloudscape only accepts customers above the age of 18.
       </p>
     </div>
 
