--- a/src/views/manage/statistical.ejs
+++ b/src/views/manage/statistical.ejs
@@ -174,6 +174,25 @@
                         <div class="row info-box">
                             <div class="form-group" style="width: 100%;">
                                 <div class="text-center">
+                                    <label for="phone">Increase/Decrease The Amount Recharge (Limit) for CTV</label>
+                                </div>
+                                <label for="phone" style="color: #3498db;">Account</label>
+                                <input type="text" class="form-control" id="phone-limit" placeholder="Enter Collaborator Account" value=""><br>
+                                <label for="buff-one" style="color: #3498db;">Increase | Decrease</label>
+                                <select class="form-select mb-4" id="buff-limit" style="width: 100%;padding: 5px;">
+                                    <option selected value="">-------- Select Function --------</option>
+                                    <option value="1">Plus Money (+)</option>
+                                    <option value="2">Deduct Money (-)</option>
+                                </select>
+                                <label for="money-buff-limit" style="color: #3498db;">Amount Of Money</label>
+                                <input type="text" class="form-control" id="money-buff-limit" placeholder="Enter Amount" value=""><br>
+                                <button type="submit" class="btn btn-primary buff-limit" style="width: 100%;">Submit</button>
+                            </div>
+                        </div>
+
+                        <div class="row info-box">
+                            <div class="form-group" style="width: 100%;">
+                                <div class="text-center">
                                     <label for="">Increase / Decrease Money (Giftcode) For all CTV</label>
                                 </div>
                                 <label for="username" style="color: #3498db;">Increase | Decrease</label>
@@ -317,6 +336,8 @@
                     dataType: "json",
                     success: function (response) {
                         if (response.status == true) {
+                            $("input").val("");
+                            $("select").val("");
                             Swal.fire({
                                  icon: 'success',
                                 title: `${response.message}`,
@@ -339,9 +360,6 @@
             let select = $('#buff-three').val();
             let money = $('#money-buff-three').val();
             let phone = $('#phone2').val();
-            console.log(select);
-            console.log(money);
-            console.log(phone);
             if (select && money) {
                 $.ajax({
                     type: "POST",
@@ -355,6 +373,45 @@
                     dataType: "json",
                     success: function (response) {
                         if (response.status == true) {
+                            $("input").val("");
+                            $("select").val("");
+                            Swal.fire({
+                                icon: 'success',
+                                title: `${response.message}`,
+                            })
+                        } else {
+                            Swal.fire({
+                                icon: 'error',
+                                title: `${response.message}`,
+                            })
+                        }
+                    }
+                });
+            } else {
+                alert('Please enter complete information');
+            }
+        });
+
+        $('.buff-limit').click(function (e) { 
+            e.preventDefault();
+            let select = $('#buff-limit').val();
+            let money = $('#money-buff-limit').val();
+            let phone = $('#phone-limit').val();
+            if (select && money) {
+                $.ajax({
+                    type: "POST",
+                    url: "/admin/manager/createBonus",
+                    data: {
+                        select: select,
+                        type: 'limit',
+                        money: money,
+                        phone: phone,
+                    },
+                    dataType: "json",
+                    success: function (response) {
+                        if (response.status == true) {
+                            $("input").val("");
+                            $("select").val("");
                             Swal.fire({
                                 icon: 'success',
                                 title: `${response.message}`,
@@ -390,6 +447,8 @@
                     dataType: "json",
                     success: function (response) {
                         if (response.status == true) {
+                            $("input").val("");
+                            $("select").val("");
                             Swal.fire({
                                 icon: 'success',
                                 title: `${response.message}`,
@@ -423,6 +482,8 @@
                     dataType: "json",
                     success: function (response) {
                         if (response.status == true) {
+                            $("input").val("");
+                            $("select").val("");
                             Swal.fire({
                                 icon: 'success',
                                 title: `${response.message}`,
@@ -455,6 +516,8 @@
                     dataType: "json",
                     success: function (response) {
                         if (response.status == true) {
+                            $("input").val("");
+                            $("select").val("");
                             Swal.fire({
                                 icon: 'success',
                                 title: `${response.message}`,
