--- a/src/views/checkIn/rechargeAwardCollectionRecord.ejs
+++ b/src/views/checkIn/rechargeAwardCollectionRecord.ejs
@@ -209,7 +209,7 @@
     <div id="app">
         <div data-v-3966082f="" class="mian">
             <div data-v-106b99c8="" data-v-3966082f="" class="navbar">
-                <div data-v-106b99c8="" class="navbar-left" onclick="location.href='/mian'">
+                <div data-v-106b99c8="" class="navbar-left" onclick="location.href='/dailytask'">
                     <div data-v-a9660e98="" data-v-106b99c8="" class="c-row c-row-middle-center">
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
