--- a/src/views/daily/statistical.ejs
+++ b/src/views/daily/statistical.ejs
@@ -161,26 +161,24 @@
                                     <span class="info-box-icon bg-info"><i class="fa fa-line-chart" aria-hidden="true"></i></span>
 
                                     <div class="info-box-content">
-                                        <span class="info-box-text">Roses today</span>
+                                        <span class="info-box-text">Weekly Commission</span>
+                                        <span class="info-box-number totalRosesF1">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6 col-12">
+                                <div class="info-box shadow">
+                                    <span clasass="info-box-icon bg-info"><i class="fa fa-line-chart" aria-hidden="true"></i></span>
+
+                                    <div class="info-box-content">
+                                        <span class="info-box-text">Yesterday's Commission</span>
                                         <span class="info-box-number totalRosesToday">0</span>
                                     </div>
                                     <!-- /.info-box-content -->
                                 </div>
                                 <!-- /.info-box -->
                             </div>
-                            <div class="col-md-3 col-sm-6 col-12">
-                                <div class="info-box shadow">
-                                    <span class="info-box-icon bg-info"><i class="fa fa-line-chart" aria-hidden="true"></i></span>
-
-                                    <div class="info-box-content">
-                                        <span class="info-box-text">Rose F1</span>
-                                        <span class="info-box-number totalRosesF1">0</span>
-                                    </div>
-                                    <!-- /.info-box-content -->
-                                </div>
-                                <!-- /.info-box -->
-                            </div>
-                            <div class="col-md-3 col-sm-6 col-12">
+                            <!-- <div class="col-md-3 col-sm-6 col-12">
                                 <div class="info-box shadow">
                                     <span class="info-box-icon bg-info"><i class="fa fa-line-chart" aria-hidden="true"></i></span>
 
@@ -188,10 +186,10 @@
                                         <span class="info-box-text">Team Roses</span>
                                         <span class="info-box-number totalRosesF">0</span>
                                     </div>
-                                    <!-- /.info-box-content -->
+                                   
                                 </div>
-                                <!-- /.info-box -->
-                            </div>
+                                
+                            </div> -->
                             <div class="col-md-3 col-sm-6 col-12">
                                 <div class="info-box">
                                     <span class="info-box-icon bg-info"><i class="fa fa-money" aria-hidden="true"></i></span>
@@ -573,6 +571,10 @@
         }
     </script>
     <script>
+
+        function formatMoney(money) {
+            return String(money).replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,');
+        }
         $('#sort-date').change(function (e) { 
             e.preventDefault();
             let timeDate = $(this).val();
@@ -600,6 +602,7 @@
             }, 
             dataType: "json",
             success: function (response) {
+                console.log(response);
                 RenderMemberNews(response.list_mems);
                 RenderRechargeNews(response.list_recharge_news);
                 RenderWithdrawNews(response.list_withdraw_news);
@@ -607,10 +610,10 @@
                 financial_details(response.financial_details_today);  
 
                 $('.totalMember').text(formatMoney(response.f1 + response.f2 + response.f3 + response.f4));
-                $('.totalRoses').text(formatMoney(response.datas[0].roses_f + response.datas[0].roses_f1));
-                $('.totalRosesToday').text(formatMoney(response.datas[0].roses_today));
-                $('.totalRosesF1').text(formatMoney(response.datas[0].roses_f1));
-                $('.totalRosesF').text(formatMoney(response.datas[0].roses_f));
+                $('.totalRoses').text(formatMoney(response.comm_total));
+                $('.totalRosesToday').text(formatMoney(response.comm_today));
+                $('.totalRosesF1').text(formatMoney(response.comm_week));
+                //$('.totalRosesF').text(formatMoney(response.datas[0].roses_f));
                 $('#ip_address').text(' - IP Address ( ' + response.datas[0].ip_address + ' )');
 
                 $('.totalRecharge').text(formatMoney(response.total_recharge));
