--- a/src/views/manage/nav.ejs
+++ b/src/views/manage/nav.ejs
@@ -29,7 +29,7 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item">
                     <a href="/admin/manager/main" class="nav-link">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <i class="nav-icon fas fa-table"></i>
                         <p>Dashboard</p>
                         <span class="right badge badge-primary"></span>
                     </a>
@@ -64,7 +64,7 @@
 
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-table"></i>
+                      <i class="nav-icon fas fa-message"></i>
                       <p>
                         Messages
                         <i class="fas fa-angle-left right"></i>
