--- a/src/views/manage/nav.ejs
+++ b/src/views/manage/nav.ejs
@@ -56,6 +56,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="/admin/manager/trx" class="nav-link">
+                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <p>TRX</p>
+                        <span class="right badge badge-danger">New</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/admin/manager/members" class="nav-link">
                         <i class="nav-icon fa fa-user-circle"></i>
                         <p>Members</p>
@@ -64,7 +71,7 @@
 
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-message"></i>
+                        <i class="nav-icon fas fa-table"></i>
                       <p>
                         Messages
                         <i class="fas fa-angle-left right"></i>
