--- a/src/views/bet/5d/5d.ejs
+++ b/src/views/bet/5d/5d.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="robots" content="noindex,nofollow">
   <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
-  <title>Tiranga</title>
+  <title>CLOUDSCAPE</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="/js/block.js"></script>
   <link rel="stylesheet" href="/5d/css/chunk3.css" />
@@ -243,7 +243,7 @@
                   <div class="text-over-image-l">
                     <!-- Your text here -->
                     <div data-v-e05c7c66="" class="WinningTip__C-body-l2">
-                      Predictkro results
+                      cloudscape results
               
                       <div data-v-e05c7c66="" class="line1" id="lottery_results_box">   
            <div data-v-e05c7c66="">
