--- a/src/views/bet/trx_wingo/win.ejs
+++ b/src/views/bet/trx_wingo/win.ejs
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="robots" content="noindex,nofollow" />
    <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport" />
-   <title>Tiranga</title>
+   <title>CLOUDSCAPE</title>
    <!-- <script src="/js/block.js"></script> -->
    <link rel="shortcut icon" href="/images/bitbug_favicon.ico" type="image/x-icon">
    <style>
