--- a/src/views/promotion/rebateratio.ejs
+++ b/src/views/promotion/rebateratio.ejs
@@ -6,7 +6,7 @@
       <meta name="google" content="notranslate" />
       <meta name="robots" content="noindex,nofollow" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-      <title>Tiranga</title>
+      <title>CLOUDSCAPE</title>
       <link rel="stylesheet" href="/assets/css/modules-b642e9bc.css">
       <link rel="stylesheet" href="/assets/css/page-activity-4fe5c6bf.css">
       <link rel="stylesheet" href="/assets/css/index-2c2fee84.css">
