--- a/src/views/promotion/subordinates.ejs
+++ b/src/views/promotion/subordinates.ejs
@@ -20,7 +20,7 @@
     />
 
     <link rel="manifest" />
-    <title>Tiranga</title>
+    <title>CLOUDSCAPE</title>
     <link rel="stylesheet" href="/assets/css/modules-5dd73da0.css" />
     <link rel="stylesheet" href="/assets/css/page-activity-a00a89c0.css" />
     <link rel="stylesheet" href="/assets/css/index-f3f1dfe8.css" />
