--- a/src/views/manage/manaJtrx.ejs
+++ b/src/views/manage/manaJtrx.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wingo | Management page</title>
+  <title>Trx Wingo | Management page</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css">
@@ -20,6 +20,19 @@
   <link rel="stylesheet" href="/css/admin.css">
 
   <style>
+    .box-xs {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      width: 18px!important;
+      height: 18px;
+      border: 1px solid #bbb;
+      border-radius: 18px;
+      margin-right: 4px;
+      color: #bbb;
+      background-color: #fff;
+    }
     .active {
       background-color: #007bff !important;
     }
@@ -49,6 +62,10 @@
       width: 13px;
       border-radius: 50%;
       margin: 0 0.13333rem;
+    }
+
+    .block-click {
+      pointer-events: none;
     }
 
     .van-col .goItem .c-tc .green {
@@ -84,6 +101,15 @@
       background-color: #e67e22 !important;
       cursor: pointer;
     }
+
+    .cursor-pointer {
+      cursor: pointer;
+    }
+
+    .active-game {
+      color: rgb(230, 126, 34);
+      font-weight: 600;
+    }
   </style>
 </head>
 
@@ -102,19 +128,19 @@
         </div>
         <section class="content">
           <div class="container-fluid">
-            <div class="row info-box">
-              <div class="col-12 col-sm-6 col-md-3" onclick="location.href='/admin/manager/index'">
+            <div class="row info-box" id="manage">
+              <div class="col-12 col-sm-6 col-md-3 cursor-pointer block-click" data="1">
                 <div class="info-box mb-3">
                   <span class="info-box-icon elevation-1 bg-primary game">1M</span>
 
-                  <div class="info-box-content">
+                  <div class="info-box-content active-game">
                     <span class="info-box-text">Trx 1 min</span>
                   </div>
                 </div>
               </div>
               <div class="clearfix hidden-md-up"></div>
 
-              <div class="col-12 col-sm-6 col-md-3" onclick="location.href='/admin/manager/index/3'">
+              <div class="col-12 col-sm-6 col-md-3 cursor-pointer" data="3">
                 <div class="info-box mb-3">
                   <span class="info-box-icon elevation-1 bg-primary game">3M</span>
 
@@ -123,7 +149,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-sm-6 col-md-3" onclick="location.href='/admin/manager/index/5'">
+              <div  class="col-12 col-sm-6 col-md-3 cursor-pointer" data="5">
                 <div class="info-box mb-3">
                   <span class="info-box-icon elevation-1 bg-primary game">5M</span>
 
@@ -132,8 +158,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-sm-6 col-md-3" onclick="location.href='/admin/manager/index/10'">
-                <div class="info-box">
+              <div class="col-12 col-sm-6 col-md-3 cursor-pointer" data="10">
+                <div class="info-box mb-3">
                   <span class="info-box-icon elevation-1 bg-primary game">10M</span>
 
                   <div class="info-box-content">
@@ -424,8 +450,7 @@
   <script src="/dist/js/adminlte.js"></script>
   <script src="/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
   <script src="/plugins/raphael/raphael.min.js"></script>
-  <script src="/js/admin/admin.js"></script>
-  <script src="/js/admin/index.js"></script>
+  <script src="/trx_wingo/admin/main.js"></script>
 </body>
  
 </html>
