--- a/src/views/manage/nav.ejs
+++ b/src/views/manage/nav.ejs
@@ -19,7 +19,7 @@
     <div class="sidebar" style="margin-top: 0;">
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="" class="img-circle elevation-2" alt="User Image">
+                <img src="/assets/png/1-a6662edb.png" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
                 <a href="#" class="d-block">Admin | <span class="admin_name"></span></a>
