--- a/src/views/manage/dashboard.ejs
+++ b/src/views/manage/dashboard.ejs
@@ -16,6 +16,47 @@
   <link rel="stylesheet" href="/dist/css/adminlte.min.css">
   <link rel="stylesheet" href="/css/admin.css">
   <style>
+
+@-webkit-keyframes rotating /* Safari and Chrome */ {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
+  -moz-animation: rotating 2s linear infinite;
+  -ms-animation: rotating 2s linear infinite;
+  -o-animation: rotating 2s linear infinite;
+  animation: rotating 2s linear infinite;
+}
+
+
+.block-click {
+  pointer-events: none;
+}
     a {
         color: #007bff;
         text-decoration: none;
@@ -46,8 +87,8 @@
               <div class="col-sm-6" style="display:contents;">
                 <h1 class="m-0" style="margin-top: 14px !important;">Dashboard</h1>
 
-                <div data-v-a9660e98="" class="van-image img m-l-10 dashboard_reload" style="width: 15px;height: 15px;padding: 10px;color: white;height: 40px;width: 40px;margin-left: 12px;top: 14px;margin-top: 10px;">
-                  <img src="/images/king.png" class="van-image__img" style="height: 30px;width: 30px;"/>
+                <div data-v-a9660e98="" class="van-image img m-l-10" style="width: 15px;height: 15px;padding: 10px;color: white;height: 40px;width: 40px;margin-left: 12px;top: 14px;margin-top: 10px;">
+                  <img data-v-8cd483ca="" width="30px" height="30px" src="/images/king.png"  class="img m-l-10 reload_money ">
               </div>
               </div>
             </div>
@@ -441,12 +482,15 @@
       });  
     }
 
-    refresh_All_prameters();
-
-    $(".dashboard_reload").click(function (e) {
+ 
+    $('.reload_money').click(function (e) {
       e.preventDefault();
+      $(this).addClass('rotating block-click');
       refresh_All_prameters();
-    });
+      setTimeout(() => {
+        $(this).removeClass('rotating block-click');
+    }, 5000);
+  });
   </script>
 
 </body>
