--- a/src/views/member/index.ejs
+++ b/src/views/member/index.ejs
@@ -26,6 +26,14 @@
     <link rel="shortcut icon" href="/images/bitbug_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <style>
+        				
+.dashboard_reload.action[data-v-8cd483ca] {
+    -webkit-animation: rotation-data-v-8cd483ca .5s linear;
+}
+
+.block-click {
+    pointer-events: none;
+}
         html,
         body {
             height: 100%;
@@ -415,7 +423,7 @@
                                     </div>
                                     <div data-v-8cd483ca="">
                                         <img data-v-8cd483ca="" width="20px" height="20px" src="/images/king (1).png"
-                                            class="img m-l-10 reload_money">
+                                            class="img m-l-10 reload_money ">
                                     </div>
                                 </div>
                             </div>
@@ -966,10 +974,10 @@
             .then(response => response.json())
             .then(data => {
                 $('.money .txt').text(` ₹ ${data.data.money_user} `);
+                setTimeout(() => {
+                    $(this).removeClass('action block-click');
+                }, 3000);
 			});	
-            setTimeout(() => {
-                $(this).removeClass('action block-click');
-            }, 3000);
         });
 
         window.onload = function () {
