--- a/src/views/manage/manaJtrx.ejs
+++ b/src/views/manage/manaJtrx.ejs
@@ -430,7 +430,7 @@
                         </div>
                       </div>
                       <div class="card-footer" style="text-align: center;">
-                        <button type="submit" class="btn btn-primary start-order">Submit</button>
+                        <button type="submit" class="btn btn-primary start-order">Get Manual Results</button>
                       </div>
                     </div>
                   </div>
