--- a/src/views/manage/manaJtrx.ejs
+++ b/src/views/manage/manaJtrx.ejs
@@ -423,10 +423,9 @@
                       <div class="card-body">
                         <div class="form-group">
                             <b>
-0 (Red and Purple) | 5 (Blue and Purple) | 1, 3, 7, 9 (Blue) | 2, 4, 6, 8 (Red)   </p>
-                            <label for="editResult" id="ketQua">Next result: 6</label>
-                            <input type="text" class="form-control" id="editResult" value=""
-                              placeholder="Enter the result (e.g., 1)">
+0 (Red and Purple) | 5 (Blue and Purple) | 1, 3, 7, 9 (Blue) | 2, 4, 6, 8 (Red) 0, 1, 2, 3(Small) 5, 6, 7, 8, 9(Big)   </p>
+                            <label for="editResult" id="ketQua">Next result: Update Next Result from List Below</label>
+                            
                         </div>
                       </div>
                       <div class="card-footer" style="text-align: center;">
