--- a/src/views/manage/manaJtrx.ejs
+++ b/src/views/manage/manaJtrx.ejs
@@ -424,7 +424,7 @@
                         <div class="form-group">
                             <b>
 0 (Red and Purple) | 5 (Blue and Purple) | 1, 3, 7, 9 (Blue) | 2, 4, 6, 8 (Red) 0, 1, 2, 3(Small) 5, 6, 7, 8, 9(Big)   </p>
-                            <label for="editResult" id="ketQua">Next result: Update Next Result from List Below</label>
+                            <label for="edit" id="">Next result: Update Next Result from List Below</label>
                             
                         </div>
                       </div>
