--- a/src/views/manage/dashboard.ejs
+++ b/src/views/manage/dashboard.ejs
@@ -102,7 +102,7 @@
                   <div class="info-box">
                       <span class="info-box-icon bg-success"><i class="fa fa-user-circle" aria-hidden="true"></i></span>
                       <div class="info-box-content">
-                          <span class="info-box-text">Today User Join</span>
+                          <span class="info-box-text">User Joined Today </span>
                           <span class="info-box-number totalMember" id="usersJoin">0</span>
                       </div>
                       <!-- /.info-box-content -->
@@ -114,7 +114,7 @@
                     <div class="info-box">
                         <span class="info-box-icon bg-warning"><i class="fa fa-check" aria-hidden="true"></i></span>
                         <div class="info-box-content">
-                            <span class="info-box-text">Today's Recharge</span>
+                            <span class="info-box-text">Recharge's Today </span>
                             <span class="info-box-number totalMember" id="TodaysRecharge">0</span>
                         </div>
                         <!-- /.info-box-content -->
@@ -126,7 +126,7 @@
                   <div class="info-box">
                       <span class="info-box-icon bg-info"><i class="fa fa-university" aria-hidden="true"></i></span>
                       <div class="info-box-content">
-                          <span class="info-box-text">Today's Withdrawal</span>
+                          <span class="info-box-text">Withdrawal's Today </span>
                           <span class="info-box-number totalMember" id="TodaysWithdrawal">0</span>
                       </div>
                       <!-- /.info-box-content -->
@@ -190,7 +190,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-warning"><i class="fa fa-file-invoice-dollar" aria-hidden="true"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">No. Total Recharge(Month) </span>
+                <span class="info-box-text">Total Recharge No. (M) </span>
                 <span class="info-box-number totalMember" id="TotalRecharge_No">0</span>
             </div>
             <!-- /.info-box-content -->
@@ -202,7 +202,7 @@
       <div class="info-box">
           <span class="info-box-icon bg-warning"><i class="fa fa-money-check-alt" aria-hidden="true"></i></span>
           <div class="info-box-content">
-              <span class="info-box-text">Total Recharge(Month) </span>
+              <span class="info-box-text">Total Recharge(M) </span>
               <span class="info-box-number totalMember" id="TotalRechargeMonth">0</span>
           </div>
           <!-- /.info-box-content -->
@@ -214,7 +214,7 @@
     <div class="info-box">
         <span class="info-box-icon bg-success"><i class="fa fa-file-invoice-dollar" aria-hidden="true"></i></span>
         <div class="info-box-content">
-            <span class="info-box-text">No. Total Withdrawal </span>
+            <span class="info-box-text"> Total Withdrawal No.</span>
             <span class="info-box-number totalMember" id="TotalWithdrawal">0</span>
         </div>
         <!-- /.info-box-content -->
@@ -227,7 +227,7 @@
   <div class="info-box">
       <span class="info-box-icon bg-danger"><i class="fa fa-money-bill-transfer" aria-hidden="true"></i></span>
       <div class="info-box-content">
-          <span class="info-box-text">No. Withdrawal Requests </span>
+          <span class="info-box-text"> Withdrawal Requests No.</span>
           <span class="info-box-number totalMember" id="WithdrawalRequests">0</span>
       </div>
       <!-- /.info-box-content -->
@@ -239,7 +239,7 @@
   <div class="info-box">
       <span class="info-box-icon bg-info"><i class="fa fa-receipt" aria-hidden="true"></i></span>
       <div class="info-box-content">
-          <span class="info-box-text">No. Total Withdrawal(Month) </span>
+          <span class="info-box-text">Withdrawal No.(M) </span>
           <span class="info-box-number totalMember" id="TotalWithdrawal_No">0</span>
       </div>
       <!-- /.info-box-content -->
@@ -251,7 +251,7 @@
   <div class="info-box">
       <span class="info-box-icon bg-danger"><i class="fa fa-credit-card" aria-hidden="true"></i></span>
       <div class="info-box-content">
-          <span class="info-box-text">Total Withdrawal(Month)</span>
+          <span class="info-box-text">Withdrawal(This Month)</span>
           <span class="info-box-number totalMember" id="TotalWithdrawal_AMT">0</span>
       </div>
       <!-- /.info-box-content -->
@@ -263,7 +263,7 @@
   <div class="info-box">
       <span class="info-box-icon bg-info"><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
       <div class="info-box-content">
-          <span class="info-box-text">Today's total bet</span>
+          <span class="info-box-text">Bet's Today</span>
           <span class="info-box-number totalMember" id="TodaysTotalBets">0</span>
       </div>
       <!-- /.info-box-content -->
@@ -275,7 +275,7 @@
   <div class="info-box">
       <span class="info-box-icon bg-warning"><i class="fa fa-trophy" aria-hidden="true"></i></span>
       <div class="info-box-content">
-          <span class="info-box-text">Today's total win</span>
+          <span class="info-box-text">Wins Today</span>
           <span class="info-box-number totalMember" id="TodaysTotalWin">0</span>
       </div>
       <!-- /.info-box-content -->
@@ -288,7 +288,7 @@
   <div class="info-box">
       <span class="info-box-icon bg-success"><i class="fa fa-balance-scale-right" aria-hidden="true"></i></span>
       <div class="info-box-content">
-          <span class="info-box-text">Today's total Loss</span>
+          <span class="info-box-text">Losses Today</span>
           <span class="info-box-number totalMember" id="TodaysTotalLoss">0</span>
       </div>
       <!-- /.info-box-content -->
