--- a/src/views/manage/manaJtrx.ejs
+++ b/src/views/manage/manaJtrx.ejs
@@ -429,7 +429,7 @@
                         </div>
                       </div>
                       <div class="card-footer" style="text-align: center;">
-                        <button type="submit" class="btn btn-primary start-order">Get Manual Results</button>
+                        <button class="btn btn-primary" id="btn_manual_results">Get Manual Results</button>
                       </div>
                     </div>
                   </div>
@@ -459,8 +459,8 @@
                               <div data-v-a9660e98="" class="van-col van-col--6">Apply</div>
                             </div>
                           </div>
-                          <div id="list-orders">
-                            <!---->
+                          <div id="list-orders-hash">
+                           
                           </div>
                         </div>
                       </div>
